# dateno-duckdb

./: COMPILATION_FIXES.md  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  STATUS.md  build.sh  extension.toml
.github/workflows/: build.yml
dev/: duckdb-extension-guide.md
openspec/: project.md
openspec/changes/add-dateno-duckdb-extension/: design.md  proposal.md  tasks.md
openspec/changes/add-dateno-duckdb-extension/specs/build-distribution/: spec.md
openspec/changes/add-dateno-duckdb-extension/specs/dateno-api/: spec.md
openspec/changes/add-dateno-duckdb-extension/specs/extension-core/: spec.md
openspec/changes/add-dateno-duckdb-extension/specs/table-function/: spec.md
openspec/changes/add-dateno-duckdb-extension/specs/testing/: spec.md
src/: api.rs  error.rs  lib.rs  table_function.rs
tests/: api_tests.rs  filter_tests.rs  integration_tests.rs
tests/fixtures/: sample_response.json
